--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,6 @@
     border-radius: 10px;
     border: 0px;
     }
-    .b-img #slides{
-    transform: scale(2);
-    }
 
 /*kata2-------------------------------------------------------------------------------------->*/  
 
@@ -314,7 +311,8 @@
         justify-content: center;
         align-items: center;
         margin-top: 24rem;
-    }
+        display: flex;
+    } 
     .b-1{
         width: 200px;
         border: #9290c3 0.5px solid;
@@ -714,6 +712,9 @@
     .b-projek1 #d-renstore.d-renstore{
         transform: translateY(-10px);
     }
+
+    /*==============================Shinka=======================================*/
+
     .b-projek2{
         width: 100%;
         height: 100%;
@@ -724,7 +725,6 @@
         align-items: center;
         overflow: hidden;
         text-align: center;
-        gap: 0.4rem;
     }
     .b-projek2:hover{
         backdrop-filter: 
@@ -753,6 +753,9 @@
     .b-projek2 #d-shinka.d-shinka{
         transform: translateY(-10px);
     }
+
+    /*==============================Shinka=======================================*/
+
     .b-projek3{
         width: 100%;
         height: 100%;
