--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -159,28 +159,16 @@
     }
     .bar-persen{
         width: 140px;
-        height: 200px;
+        height: 62vh;
         flex-direction: column;
-        gap: 0;
         top: 0;
-        margin-top: 17%;
+        margin-top: 70%;
         position: absolute;
+        justify-content: space-between;
     }
     .b-1{
         width: 50px;
         height: 15px;
-    }
-    #b-1{
-        position: absolute;
-        top: 6.5rem;
-    }
-    #b-2{
-        position: absolute;
-        top: 18.5rem;
-    }
-    #b-3{
-        position: absolute;
-        top: 30.3rem;
     }
     @keyframes bar1 /*keyframe-css----->*/{
         0%{
