--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@
         color: black;
         font-family: 'Jersey 25',sans-serif;
         flex-direction: column;
-        gap: 0.6rem;
+        gap: 1.5rem;
         animation: skill 4s infinite;
     }
     /* @keyframes skill{
@@ -304,14 +304,10 @@
     }
     .bar-persen{
         display: flex;
-        gap: 4.8rem;
         width: 100%;
         height: 50px;
-        position: absolute;
         justify-content: center;
         align-items: center;
-        margin-top: 24rem;
-        display: flex;
     } 
     .b-1{
         width: 200px;
@@ -579,34 +575,21 @@
     }
     .c-p-animasi{
         display: flex;
-        align-items: center;
-        
+        flex-direction: column;
     }
     .animasi1{
-        width: 700px;
-        height: 70px;
+        width: 100%;
+        height: 10px;
         background-color: #9290c3;
         animation: animasi1 7s  infinite;
         display: flex;
         color: #070f2b;
         justify-content: center;
         align-items: center;
-        border-radius: 10px;
         font-size: 30px;
         font-family: 'Jersey 25';
         position: relative;
         z-index: 2;
-    }
-    @keyframes animasi1{
-        0%{
-            transform: translateX(-120%);
-        }
-        50%{
-            transform: translateX(40%);
-        }
-        100%{
-            transform: translateX(200%);
-        }
     }
 
 
